# verify-oauth2-id-token

./: pyproject.toml  requirements.txt  verify.py
verify_oauth2_id_token/: __init__.py  main.py
verify_oauth2_id_token/provider/common/: exception.py  model.py
verify_oauth2_id_token/provider/common/func/: __init__.py  func.py
verify_oauth2_id_token/provider/google/: __init__.py  constant.py  func.py  model.py  verify.py
verify_oauth2_id_token/provider/microsoft/: __init__.py  constant.py  func.py  model.py  verify.py
