[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "verify-oauth2-id-token"
version = "0.0.1"
description = " Straightforward OAuth2 ID Token verification with support for Google and Microsoft OAuth service providers"
authors = ["Ramzi Sabra"]
homepage = "https://github.com/yasamoka/verify-oauth2-id-token"
packages = [
    { include = "verify_oauth2_id_token" }
]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^41.0.1"
pycryptodome = "^3.18.0"
pydantic = { version = "^1.10.9", extras = ["email"] }
pyjwt = "^2.7.0"
requests-cache = "^1.0.1"

[tool.pyright]
include = ["verify_oauth2_id_token"]
typeCheckingMode = "strict"
venvPath = ".venv"
